	    Linux [Greg]
	6.  Added "SELECT ... FROM SUBTREE /path/name" support to allow the
	    retrieval of an entire subtree of objects with one select
	    statement.
	7.  Added templating mechanism for applications to allow the
	    application of a "style" to an application, and reducing a lot of
	    cut-and-paste repetition for widget properties.

-------------------------------------------------------------------------------
0.7.3 --> 0.7.4	    01-Mar-2005     MAJOR DEVELOPMENT RELEASE

    Once again, this is a major development release - including a lot of new
    features and a lot of bug fixes.

    Changes:

	1.  Moderate Mozilla 1.x support and IE6 support now implemented, as
	    well as some user agent detection logic, capabilities matrix, and
	    browser compatibility layer.
	2.  Image widget added.
	3.  Obscure/Reveal subsystem for automatically managing the issue of
	    window or tab closure while data is unsaved, etc.
	4.  Serialization of loading of data from server to browser provides
	    a great deal more robustness.
	5.  V3 prtmgmt subsystem is now operational.
	6.  Report writer revamped; support for far more complex report outputs
	    including graphics, borders, etc.  
	    NOTE: incompatible changes made in report spec format ( .rpt file).
	7.  Matt McGill added a POP3 driver.
	8.  New scrollbar widget.
	9.  Widgets such as datetime, dropdown, checkbox, etc., can all receive
	    keyboard focus and participate in the tabbing order.
	10. Time-setting controls added to datetime widget
	11. Datetime, dropdown, and checkbox now allow NULL values.
	12. Presentation hints:  delivery to client working; some support for
	    certain hints on the client (such as allowchars/badchars, defaults,
	    etc.).  Also added 'alwaysdef' style hint for resetting the default
	    value on all modifications.  Better support for presentation hints
	    in sybase driver.
	13. objInfo() mechanism for obtaining metadata about an object.